<resources>
    <string name="app_name">Via</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_make">MakeActivity</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="title_activity_photo">PicChooseActivity</string>
    <string name="title_activity_select_photo">PicChooseActivity</string>
    <string name="title_activity_select_option">OptionActivity</string>
    <string name="title_activity_crop">PicCrop</string>
    <string name="title_activity_paster">PasterActivity</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="title_activity_template">TemplateActivity</string>

    <string name="pic_location">to_define</string>

    <!-- 主界面的两个按钮 -->
    <string name="make">make</string>
    <string name="read">read</string>

    <!--选择图片的三个按钮-->
    <string name="Camera">camera</string>
    <string name="album">album</string>
    <string name="cancel">cancel</string>
    <string name="back">back</string>
    <string name="apply">apply</string>
    <string name="title_activity_filter">FilterActivity</string>

    <string name="option_btn_del_msg">This option is the right option, which will remove the entire option module. Continue?</string>
    <string name="option_can_msg">Do you want to remove all the options?</string>
    <string name="option_can_pos">delete all</string>
    <string name="option_can_nar">cancel changes</string>

    <string name="puzzle_del_msg">Are you sure to remove puzzle setting?</string>
    <string name="puzzle_add_msg">Are you sure to add puzzle setting?</string>
    <string name="puzzle_max_num_msg">There is a puzzle setting in the project.</string>
    <string name="option_remind">(Hold on to change the TRUE option)</string>

    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="new_option">New Option</string>
    <string name="del_err_inf">deletion error!</string>
    <string name="option_add">+</string>

    <string name="true_option">√.</string>
    <string name="false_option">X.</string>
    <string name="confirm">confirm</string>
    <string name="hello_world">Hello world!</string>

    <string name="img_path_error">Image path error</string>
    <string name="no_photo">No Photo</string>

    <string name="No">No_filter</string>
    <string name="Ice">Ice</string>
    <string name="Molten">Molten</string>
    <string name="Comic">Comic</string>
    <string name="SoftGlow">SoftGlow</string>
    <string name="GlowingEdge">GlowingEdge</string>
    <string name="mirror">mirror</string>
    <string name="film">film</string>
    <string name="RedTone">RedTone</string>
    <string name="BlueTone">BlueTone</string>
    <string name="Saturation">Saturation</string>
    <string name="Reflect">Reflect</string>
    <string name="Tint">Tint</string>
    <string name="BigBrother">BigBrother</string>
    <string name="Color">Color</string>
    <string name="Invert">Invert</string>
    <string name="BlackWhite">BlackWhite</string>
    <string name="Threshold">Threshold</string>

    <string name="Brick">Brick</string>
    <string name="Bright">Bright</string>
    <string name="Edge">Edge</string>
    <string name="Feather">Feather</string>
    <string name="Gamma">Gamma</string>
    <string name="Light">Light</string>
    <string name="Noise">Noise</string>
    <string name="Border">Border</string>
    <string name="Video">Video</string>
    <string name="YCB">YCB</string>

    <string name="save_success">Save success</string>
    <string name="no_inputName">No input file name!</string>
    <string name="input_dialog">Input file name please!</string>

    <string name="max_treasure">The amount of treasure has reached its maximum.</string>

    <string name="not_option_screen">This screen is not a NORMAL screen or a OPTION screen</string>
    <string name="not_treasure_screen">This screen is not a NORMAL screen or a TREASURE screen</string>
    <string name="not_puzzle_screen">This screen is not a NORMAL screen or a PUZZLE screen</string>

    <string name="delete">delete</string>

    <string name="waiting">Waiting……</string>
    <string name="confirm_delete">Are you sure to delete?</string>

    <string name="prompt">prompt</string>

    <string name="templete_select">Select templete</string>

</resources>
