<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/select_photo_background">

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/select_photo_btn_margin"
            android:layout_marginRight="@dimen/select_photo_btn_margin"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/Camera"
            android:background="@drawable/btn_selector"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/select_photo_btn_margin"
            android:layout_marginRight="@dimen/select_photo_btn_margin"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/album"
            android:background="@drawable/btn_selector"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="@dimen/select_photo_btn_margin"
            android:layout_marginRight="@dimen/select_photo_btn_margin"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:background="@drawable/btn_selector"
            android:textColor="@color/white"
            android:onClick="cancelBtnListener"/>
    </LinearLayout>
</RelativeLayout>
